--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,91 +6,99 @@
         xmlns:local="clr-namespace:Capital"
         mc:Ignorable="d"
         Title="MainWindow" Height="800" Width="1200">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150"/>
-            <ColumnDefinition Width="*" 
-                              MinWidth="50"
-                              MaxWidth="150"/>
-            <ColumnDefinition Width="*"/>
+    <Viewbox>
 
-        </Grid.ColumnDefinitions>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="*" 
+                          MinWidth="50"
+                          MaxWidth="150"/>
+                <ColumnDefinition Width="700"/>
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="*" MinHeight="350"/>
+            </Grid.ColumnDefinitions>
 
-        </Grid.RowDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="*" MinHeight="350"/>
 
-        <TextBlock Text="Депозит" Margin="3"/>
-        <TextBlock Text="Начальный лот"
-                   Grid.Row="1" Margin="3"/>
-        <TextBlock Text="Тейк профит"
-           Grid.Row="2" Margin="3"/>
-        <TextBlock Text="Стоп лос"
-           Grid.Row="3" Margin="3"/>
-        <TextBlock Text="Коммиссия"
-           Grid.Row="4" Margin="3"/>
-        <TextBlock Text="% Процент приб"
-           Grid.Row="5" Margin="3"/>
-        <TextBlock Text="Количество сделок"
-           Grid.Row="6" Margin="3"/>
-        <TextBlock Text="Минимальный деп"
-           Grid.Row="7" Margin="3"/>
-        <TextBlock Text="Гарантийное обеспеч"
-           Grid.Row="9" Margin="3"/>
-        <ComboBox Name="_comboBox"
-                  Grid.Row="11" Margin="5,0"/>
+            </Grid.RowDefinitions>
 
-
-        <TextBlock x:Name="_depo"
-                   Grid.Column="1"/>
-        <TextBlock x:Name="_startLot"
-                   Grid.Column="1" Grid.Row="1"/>
-        <TextBlock x:Name="_take"
-                   Grid.Column="1" Grid.Row="2"/>
-        <TextBlock x:Name="_stop"
-                   Grid.Column="1" Grid.Row="3"/>
-        <TextBlock x:Name="_commis"
-                   Grid.Column="1" Grid.Row="4"/>
-        <TextBlock x:Name="_persentProfit"
-                   Grid.Column="1" Grid.Row="5"/>
-        <TextBlock x:Name="_countTrades"
-                   Grid.Column="1" Grid.Row="6"/>
-        <TextBlock x:Name="_minStartPercent"
-                   Grid.Column="1" Grid.Row="7"/>
-        <TextBlock x:Name="_go"
-                   Grid.Column="1" Grid.Row="9"/>
-        <Button Content="Расчитать"
-                Click="Button_Click"
-                Grid.Column="1" Grid.Row="11"/>
+            <TextBlock Text="Депозит" Margin="3"/>
+            <TextBlock Text="Начальный лот"
+               Grid.Row="1" Margin="3"/>
+            <TextBlock Text="Тейк профит"
+       Grid.Row="2" Margin="3"/>
+            <TextBlock Text="Стоп лос"
+       Grid.Row="3" Margin="3"/>
+            <TextBlock Text="Коммиссия"
+       Grid.Row="4" Margin="3"/>
+            <TextBlock Text="% Процент приб"
+       Grid.Row="5" Margin="3"/>
+            <TextBlock Text="Количество сделок"
+       Grid.Row="6" Margin="3"/>
+            <TextBlock Text="Минимальный деп"
+       Grid.Row="7" Margin="3"/>
+            <TextBlock Text="Гарантийное обеспеч"
+       Grid.Row="9" Margin="3"/>
+            <ComboBox Name="_comboBox"
+              Grid.Row="11" Margin="5,0"/>
 
 
-        <GroupBox Header="Таблица результатов"
-                  Grid.Column="2" Grid.RowSpan="12" 
-                  Margin="10,1">
-            <DataGrid x:Name="_dataGrid"
-                      Margin="5"/>
-        </GroupBox> 
-        
-        <Canvas x:Name="_canvas"
-                Grid.Row="13"
-                Grid.Column="3"
-                Margin="10"
-                Background="Gray">
-            
-        </Canvas>
-        
-    </Grid>
+            <TextBlock x:Name="_depo"
+               Grid.Column="1"/>
+            <TextBlock x:Name="_startLot"
+               Grid.Column="1" Grid.Row="1"/>
+            <TextBlock x:Name="_take"
+               Grid.Column="1" Grid.Row="2"/>
+            <TextBlock x:Name="_stop"
+               Grid.Column="1" Grid.Row="3"/>
+            <TextBlock x:Name="_commis"
+               Grid.Column="1" Grid.Row="4"/>
+            <TextBlock x:Name="_persentProfit"
+               Grid.Column="1" Grid.Row="5"/>
+            <TextBlock x:Name="_countTrades"
+               Grid.Column="1" Grid.Row="6"/>
+            <TextBlock x:Name="_minStartPercent"
+               Grid.Column="1" Grid.Row="7"/>
+            <TextBlock x:Name="_go"
+               Grid.Column="1" Grid.Row="9"/>
+            <Button Content="Расчитать"
+            Click="Button_Click"
+            Grid.Column="1" Grid.Row="11"/>
+
+
+            <GroupBox Header="Таблица результатов"
+              Grid.Column="2" Grid.RowSpan="12" 
+              Margin="10,1">
+                <DataGrid x:Name="_dataGrid"
+                  Margin="5"/>
+            </GroupBox>
+
+            <Canvas x:Name="_canvas"
+            Grid.Row="13"
+            Grid.Column="3"
+            Margin="10"
+            Background="Gray">
+
+            </Canvas>
+
+        </Grid>
+
+
+
+
+    </Viewbox>
+    
 </Window>
